--- a/HistoricalClimatology.Rmd
+++ b/HistoricalClimatology.Rmd
@@ -455,8 +455,6 @@ StrongTorns <- centroids %>%
 SignificantTorns <- centroids %>%
   filter(maxEF == "F4" | maxEF == "F5") %>%
   as_Spatial
-
-
 ```
 
 ```{r}
@@ -468,31 +466,52 @@ stateBorders <- us_states(states = sts)
 
 Plot the data for the tornado touchdown locations (`SigTorns`). Add a map of the United States. Color code the tornadoes by ORANGE: weak (F0, F1), RED: strong(F2, F3), BLACK: significant (F4, F5). 
 ```{r}
-tm_shape(stateBorders, is.master = TRUE, projection = "+proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs") +
+
+LargenT <- centroids %>%
+  filter(nT >20) %>%
+  as_Spatial()
+
+cr <- RColorBrewer::brewer.pal(9, "YlOrRd")
+cr <- cr[-c(1:3)]
+
+tm_shape(stateBorders) +
   tm_borders(col = "gray70", alpha = 1) +
   tm_compass(size = 3, fontsize = 1, lwd = 2, color.dark = "gray70") +       
   tm_scale_bar(width = .3, size = 0.8, lwd = 1.75, color.dark = "gray70")  +
 #tm_shape(WeakTorns) +
 #  tm_bubbles(size = 0.1, col = "blue", border.col = "blue", alpha = 0.5) +
-tm_shape(StrongTorns) +
-  tm_bubbles(size = 0.3, col = "red", border.col = "red", alpha = 0.5) +
-tm_shape(SignificantTorns) +
-  tm_bubbles(size = 0.3, 
-             col = "black", 
-             border.col = "black", alpha = 0.5) +
-tm_add_legend('symbol', 
-	col = c("red", "black"),
-	border.col = "grey40",
-	labels = c('F2 - F3 Tornadoes','F4 - F5 Tornadoes'),
-	title="Fujita Ratings") +
+tm_shape(LargenT, is.master = TRUE, projection = "+proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs") +
+  tm_bubbles(col = "nT", border.col = "black", alpha = 0.8, palette = cr) +
 tm_layout(legend.show = TRUE,
           legend.position = c("right", "bottom"),
           legend.text.size = 0.8,
           legend.title.size = 1.2,
           attr.position = c("left", "bottom"), 
-          inner.margins = c(.01, .01, .01, .01))
+          inner.margins = c(.25, .25, .25, .25))
 
       
+```
+
+
+```{r}
+LargeCas <- centroids %>%
+  filter(GroupDayCas >=500) %>%
+  as_Spatial()
+
+tm_shape(stateBorders) +
+  tm_borders(col = "gray70", alpha = 1) +
+  tm_compass(size = 3, fontsize = 1, lwd = 2, color.dark = "gray70") +       
+  tm_scale_bar(width = .3, size = 0.8, lwd = 1.75, color.dark = "gray70")  +
+#tm_shape(WeakTorns) +
+#  tm_bubbles(size = 0.1, col = "blue", border.col = "blue", alpha = 0.5) +
+tm_shape(LargeCas, is.master = TRUE, projection = "+proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs") +
+  tm_bubbles(col = "GroupDayCas", border.col = "black", alpha = 0.8, palette = cr, labels = c("500 to 1,000","1,001 to 2,000","2,001 to 3,000","3,001 to 4,000","4,001 to 5,000","5,001 to 6,000")) +
+tm_layout(legend.show =TRUE,
+          legend.position = c("right", "bottom"),
+          legend.text.size = 0.8,
+          legend.title.size = 1.2,
+          attr.position = c("left", "bottom"), 
+          inner.margins = c(.25, .25, .25, .25))
 ```
 
 
