--- a/HistoricalClimatology.Rmd
+++ b/HistoricalClimatology.Rmd
@@ -255,6 +255,13 @@ LargeClusTorns <- HistoricalGroupTornadoes%>%
   filter(groupNumber == 288)
 ```
 
+
+```{r}
+cr <- RColorBrewer::brewer.pal(9, "Greys")
+cr <- cr[-c(1,3)]
+```
+
+
 ```{r}
 clus1974 <- (tm_shape(stateBorders) + 
   tm_borders(col = "gray70", alpha = 1) +
@@ -277,7 +284,7 @@ clus1974 <- (tm_shape(stateBorders) +
 tm_shape(LargeClus, is.master = TRUE, projection = "+proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs") +
   tm_borders(col = "black", lwd = 3) +
 tm_shape(LargeClusTorns) +
-  tm_symbols(size = 4, col = "cDate", alpha = 0.8, palette = "YlOrRd", title.col = "Convective Day", border.alpha = 0) +
+  tm_symbols(size = 4, col = "cDate", alpha = 0.8, palette = "Blues", title.col = "Convective Day", border.alpha = 0) +
       tm_layout(title = "April 3 - 4, 1974 \n 94 tornadoes", 
               title.position = c("center", "top"), 
               legend.title.size = 1.4,
@@ -301,6 +308,12 @@ LongClusTorns <- HistoricalGroupTornadoes%>%
 ```
 
 ```{r}
+cr <- RColorBrewer::brewer.pal(9, "Greys")
+cr <- cr[-c(1:4)]
+```
+
+
+```{r}
 clus1908 <- (tm_shape(stateBorders) + 
   tm_borders(col = "gray70", alpha = 1) +
   tm_compass(size = 3, fontsize = 1, lwd = 2, color.dark = "gray70") +       
@@ -322,7 +335,7 @@ clus1908 <- (tm_shape(stateBorders) +
 tm_shape(LongClus, is.master = TRUE, projection = "+proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs") +
   tm_borders(col = "black", lwd = 3) +
 tm_shape(LongClusTorns) +
-  tm_symbols(size = 4, col = "cDate", alpha = 0.8, palette = "YlOrRd", title.col = "Convective Day", border.alpha = 0) +
+  tm_symbols(size = 4, col = "cDate", alpha = 0.8, palette = "Blues", title.col = "Convective Day", border.alpha = 0) +
       tm_layout(title = "April 22 - 25, 1908 \n 32 tornadoes", 
               title.position = c("center", "top"), 
               legend.title.size = 1.4,
@@ -463,6 +476,10 @@ stateBorders <- us_states(states = sts)
 ```
 
 
+```{r}
+cr <- RColorBrewer::brewer.pal(9, "YlOrRd")
+cr <- cr[-c(1:4)]
+```
 
 Plot the data for the tornado touchdown locations (`SigTorns`). Add a map of the United States. Color code the tornadoes by ORANGE: weak (F0, F1), RED: strong(F2, F3), BLACK: significant (F4, F5). 
 ```{r}
@@ -471,49 +488,68 @@ LargenT <- centroids %>%
   filter(nT >20) %>%
   as_Spatial()
 
-cr <- RColorBrewer::brewer.pal(9, "YlOrRd")
-cr <- cr[-c(1:3)]
-
-tm_shape(stateBorders) +
+torn <- (tm_shape(stateBorders) +
   tm_borders(col = "gray70", alpha = 1) +
   tm_compass(size = 3, fontsize = 1, lwd = 2, color.dark = "gray70") +       
   tm_scale_bar(width = .3, size = 0.8, lwd = 1.75, color.dark = "gray70")  +
 #tm_shape(WeakTorns) +
 #  tm_bubbles(size = 0.1, col = "blue", border.col = "blue", alpha = 0.5) +
 tm_shape(LargenT, is.master = TRUE, projection = "+proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs") +
-  tm_bubbles(col = "nT", border.col = "black", alpha = 0.8, palette = cr) +
-tm_layout(legend.show = TRUE,
+  tm_bubbles(col = "nT", border.col = "black", alpha = 0.8, palette = "Greens", title.col = "Tornadoes") +
+tm_layout(main.title = "A", legend.show = TRUE,
           legend.position = c("right", "bottom"),
           legend.text.size = 0.8,
           legend.title.size = 1.2,
           attr.position = c("left", "bottom"), 
-          inner.margins = c(.25, .25, .25, .25))
+          inner.margins = c(.25, .25, .25, .25)))
 
       
 ```
 
+```{r}
+cr <- RColorBrewer::brewer.pal(9, "Reds")
+cr <- cr[-c(1:3)]
+```
 
 ```{r}
 LargeCas <- centroids %>%
   filter(GroupDayCas >=500) %>%
   as_Spatial()
 
-tm_shape(stateBorders) +
-  tm_borders(col = "gray70", alpha = 1) +
-  tm_compass(size = 3, fontsize = 1, lwd = 2, color.dark = "gray70") +       
-  tm_scale_bar(width = .3, size = 0.8, lwd = 1.75, color.dark = "gray70")  +
+cas <- (tm_shape(stateBorders) +
+  tm_borders(col = "gray70", 
+             alpha = 1) +
+  tm_compass(size = 3, 
+             fontsize = 1, 
+             lwd = 2, 
+             color.dark = "gray70") +       
+  tm_scale_bar(width = .3, 
+               size = 0.8, 
+               lwd = 1.75, 
+               color.dark = "gray70")  +
 #tm_shape(WeakTorns) +
 #  tm_bubbles(size = 0.1, col = "blue", border.col = "blue", alpha = 0.5) +
-tm_shape(LargeCas, is.master = TRUE, projection = "+proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs") +
-  tm_bubbles(col = "GroupDayCas", border.col = "black", alpha = 0.8, palette = cr, labels = c("500 to 1,000","1,001 to 2,000","2,001 to 3,000","3,001 to 4,000","4,001 to 5,000","5,001 to 6,000")) +
-tm_layout(legend.show =TRUE,
+tm_shape(LargeCas, 
+         is.master = TRUE, 
+         projection = "+proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs") +
+  tm_bubbles(col = "GroupDayCas", 
+             border.col = "black", 
+             alpha = 0.8, 
+             palette = cr, 
+             labels = c("500 to 1,000","1,001 to 2,000","2,001 to 3,000","3,001 to 4,000","4,001 to 5,000","5,001 to 6,000"), 
+             title.col = "Casualties") +
+tm_layout(main.title = "B", 
+          legend.show =TRUE,
           legend.position = c("right", "bottom"),
           legend.text.size = 0.8,
           legend.title.size = 1.2,
           attr.position = c("left", "bottom"), 
-          inner.margins = c(.25, .25, .25, .25))
+          inner.margins = c(.25, .25, .25, .25)))
 ```
 
+```{r}
+tmap_arrange(torn, cas)
+```
 
 Create a figure of the tornado cluster density plot for all of the tornadoes (A) and only the strongest tornadoes (B). 
 
@@ -532,12 +568,12 @@ ggplot(stateBorders) +
   geom_sf(fill = NA, col = "gray70") + 
   stat_density2d(aes(x = slon, y = slat, fill = stat(level)), alpha = .4, h = 4, contour = TRUE,
                  geom = "polygon", data = HistoricalBigDayTornadoes) +
-  scale_fill_distiller(palette = "YlOrRd", direction  = 1) +
-  labs(x = "Longitude", y = "Latitude", fill = "Density") +
-  ggtitle("Density of Historical Big Day Tornadoes") +
+  scale_fill_distiller(palette = "Greens", direction  = 1) +
+  labs(x = "Longitude", y = "Latitude", fill = "Tornado Density") +
+  #ggtitle("Density of Historical Clusters") +
   theme_bw() +
   #geom_sf(data = centroids, alpha = 0.4) +
-  theme(plot.title = element_text(family = "Arial" , hjust = 0.5), legend.direction="horizontal", legend.position="bottom", legend.key.width = unit(1.5, 'cm'), legend.title = element_text("Tornado Density")) #+
+  theme(plot.title = element_text(family = "Arial" , hjust = 0.5), legend.direction="horizontal", legend.position="bottom", legend.key.width = unit(1.5, 'cm')) #+
  # geom_point(data = HistoricalBigDayTornadoes, aes( x = slon, y = slat))
 
 
@@ -816,6 +852,13 @@ x <- omg %>%
             tot = NumTorn/NumClus)
 
 ```
+
+```{r}
+x$decade <- as.factor(x$decade)
+
+ggplot(HistoricalBigDays.sfdfT) + geom_boxplot(aes(Year, y = nT, group = cut_width(Year, 10))) 
+```
+
 
 ##Number of Casualties: 
 
