--- a/HistoricalClimatology.Rmd
+++ b/HistoricalClimatology.Rmd
@@ -634,18 +634,24 @@ test <- ggplot(NumClusbyYear) +
  # geom_bar(aes(y = totTorn, x = Year, fill = "blue"), position = "stack", stat = "identity") +
     #geom_smooth(aes(y = totTorn, x = Year), method = lm, se = FALSE, color = "red") +
   scale_fill_manual(values = c("slategray", "deeppink4"), name = "", labels = c("Below Normal", "Above Normal")) +
-  scale_x_continuous(expand = c(0, 0), limits = c(1880, 1990), breaks = seq(1880, 1990, 5)) +
+  scale_x_continuous(expand = c(0, 0), limits = c(1880, 1990), breaks = seq(1880, 1985, 5)) +
   scale_y_continuous(expand = c(-0, 0), limits = c(-50, 100), breaks = seq(-50, 100,10)) +
   labs(x = "Year", y = "Number of Tornadoes") +
   theme_minimal()
-test + theme(legend.position = "bottom", 
+test + theme(legend.text = element_text(size=12),
+              legend.position = "bottom", 
              legend.direction = "horizontal", 
-             axis.text.x = element_text(angle = 45, vjust = 0.5, hjust=1), 
-             axis.text=element_text(size=12),
-             axis.title=element_text(size=14), 
-             legend.text=element_text(size=12), 
+             axis.text.x = element_text(angle = 45, margin = margin(t = 10)), 
+            axis.title.x = element_text( margin = margin(t=10)), 
+             axis.text.y = element_text(margin = margin(r = 10)), 
+             axis.title.y = element_text( margin = margin(r=10)), 
+             strip.text = element_text(size=16), 
+             axis.text = element_text(size=12), 
+             axis.title=element_text(size=14,face="bold"), 
              panel.grid.major.x = element_blank(),
              panel.grid.minor.x = element_blank())
+
+
 ```
 
 ```{r}
@@ -726,6 +732,7 @@ Figure: Separate by summer and winter and plot the clusters by hour. Separate to
 ```{r}
 library(wesanderson)
 pal <- wes_palette("Zissou1", 5, type = "continuous")
+pal <- c("#78B7C5", "#EBCC2A", "#E1AF00", "#F21A00")
 ```
 
 
@@ -745,7 +752,13 @@ P1 <- ggplot(NumClusbyHour_MAM, aes(fill = maxEF, y = count, x = Hour)) +
   theme_minimal() +
   ggtitle("MAM")
 
-P1 <- P1 + theme(panel.grid.minor = element_blank(), axis.text=element_text(size=12), axis.title=element_text(size=14,face="bold"))
+P1 <- P1 + theme(panel.grid.minor = element_blank(), axis.text.x = element_text(angle = 45, margin = margin(t = 10)), 
+            axis.title.x = element_text( margin = margin(t=10)), 
+             axis.text.y = element_text(margin = margin(r = 10)), 
+             axis.title.y = element_text( margin = margin(r=10)), 
+             strip.text = element_text(size=16), 
+             axis.text = element_text(size=12), 
+             axis.title=element_text(size=14,face="bold"))
 P1
 ```
 
@@ -766,7 +779,13 @@ P2 <- ggplot(NumClusbyHour_JJA, aes(fill = maxEF, y = count, x = Hour)) +
   theme_minimal() +
   ggtitle("JJA")
 
-P2 <- P2 + theme(panel.grid.minor = element_blank(), axis.text=element_text(size=12), axis.title=element_text(size=14,face="bold"))
+P2 <- P2 + theme(panel.grid.minor = element_blank(), axis.text.x = element_text(angle = 45, margin = margin(t = 10)), 
+            axis.title.x = element_text( margin = margin(t=10)), 
+             axis.text.y = element_text(margin = margin(r = 10)), 
+             axis.title.y = element_text( margin = margin(r=10)), 
+             strip.text = element_text(size=16), 
+             axis.text = element_text(size=12), 
+             axis.title=element_text(size=14,face="bold"))
 P2
 ```
 
@@ -787,7 +806,13 @@ P3 <- ggplot(NumClusbyHour_SON, aes(fill = maxEF, y = count, x = Hour)) +
   theme_minimal() +
   ggtitle("SON")
 
-P3 <- P3 + theme(panel.grid.minor = element_blank(), axis.text=element_text(size=12), axis.title=element_text(size=14,face="bold"))
+P3 <- P3 + theme(panel.grid.minor = element_blank(), axis.text.x = element_text(angle = 45, margin = margin(t = 10)), 
+            axis.title.x = element_text( margin = margin(t=10)), 
+             axis.text.y = element_text(margin = margin(r = 10)), 
+             axis.title.y = element_text( margin = margin(r=10)), 
+             strip.text = element_text(size=16), 
+             axis.text = element_text(size=12), 
+             axis.title=element_text(size=14,face="bold"))
 P3
 ```
 
@@ -808,8 +833,15 @@ P4 <- ggplot(NumClusbyHour_DJF, aes(fill = maxEF, y = count, x = Hour)) +
   theme_minimal() +
   ggtitle("DJF")
 
-P4 <- P4 + theme(panel.grid.minor = element_blank(), axis.text=element_text(size=12), axis.title=element_text(size=14,face="bold"))
+P4 <- P4 + theme(panel.grid.minor = element_blank(), axis.text.x = element_text(angle = 45, margin = margin(t = 10)), 
+            axis.title.x = element_text( margin = margin(t=10)), 
+             axis.text.y = element_text(margin = margin(r = 10)), 
+             axis.title.y = element_text( margin = margin(r=10)), 
+             strip.text = element_text(size=16), 
+             axis.text = element_text(size=12), 
+             axis.title=element_text(size=14,face="bold"))
 P4
+
 ```
 
 ```{r}
