--- a/HistoricalClimatology.Rmd
+++ b/HistoricalClimatology.Rmd
@@ -396,11 +396,14 @@ Mar27tornadoes <- Mar27tornadoes %>%
   mutate(Hour2 = ifelse(hour <= 6, hour + 24, hour))
 ```
 
+
+
 **Make a map of the March 27 tornado day. Obtain the state and county boundaries from the `USAboundaries` package. Plot as an example of a historical cluster.**
 ```{r}
 Mar27tornadoes$Hour2 <- cut(Mar27tornadoes$Hour2, breaks=c(6,12,18,24,30))
 
 Mar1882 <- (tm_shape(stateBorders) + 
+              tm_text("state_name") +
   tm_borders(col = "gray70", alpha = 1) +
   tm_compass(size = 3, fontsize = 1, lwd = 2, color.dark = "gray70") +       
   tm_scale_bar(width = .3, size = 0.8, lwd = 1.75, color.dark = "gray70") +
@@ -483,19 +486,22 @@ cr <- cr[-c(1:4)]
 
 Plot the data for the tornado touchdown locations (`SigTorns`). Add a map of the United States. Color code the tornadoes by ORANGE: weak (F0, F1), RED: strong(F2, F3), BLACK: significant (F4, F5). 
 ```{r}
-
 LargenT <- centroids %>%
-  filter(nT >20) %>%
+  filter(nT >15) %>%
   as_Spatial()
 
+cr <- RColorBrewer::brewer.pal(9, "Greens")
+cr <- c("#E5F5E0","#74C476","#41AB5D", "#238B45","#006D2C", "#00441B")
+
 torn <- (tm_shape(stateBorders) +
+  tm_text("state_abbr")+
   tm_borders(col = "gray70", alpha = 1) +
   tm_compass(size = 3, fontsize = 1, lwd = 2, color.dark = "gray70") +       
   tm_scale_bar(width = .3, size = 0.8, lwd = 1.75, color.dark = "gray70")  +
 #tm_shape(WeakTorns) +
 #  tm_bubbles(size = 0.1, col = "blue", border.col = "blue", alpha = 0.5) +
 tm_shape(LargenT, is.master = TRUE, projection = "+proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs") +
-  tm_bubbles(col = "nT", border.col = "black", alpha = 0.8, palette = "Greens", title.col = "Tornadoes") +
+  tm_bubbles(col = "nT", border.col = "black", alpha = 0.9, n=5, palette = cr, title.col = "Tornadoes", breaks = c(15, 30, 45, 60, 75, 90, 105)) +
 tm_layout(main.title = "A", legend.show = TRUE,
           legend.position = c("right", "bottom"),
           legend.bg.color = "white",
@@ -504,12 +510,12 @@ tm_layout(main.title = "A", legend.show = TRUE,
           attr.position = c("left", "bottom"), 
           inner.margins = c(.3, .15, .15, .15)))
 
-      
+torn      
 ```
 
 ```{r}
 cr <- RColorBrewer::brewer.pal(9, "Reds")
-cr <- cr[-c(1:3)]
+cr <- c("#FEE0D2", "#FC9272", "#EF3B2C", "#CB181D", "#A50F15", "#67000D")
 ```
 
 ```{r}
@@ -518,6 +524,7 @@ LargeCas <- centroids %>%
   as_Spatial()
 
 cas <- (tm_shape(stateBorders) +
+          tm_text("state_abbr")+
   tm_borders(col = "gray70", 
              alpha = 1) +
   tm_compass(size = 3, 
@@ -533,6 +540,7 @@ cas <- (tm_shape(stateBorders) +
 tm_shape(LargeCas, 
          is.master = TRUE, 
          projection = "+proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs") +
+  
   tm_bubbles(col = "GroupDayCas", 
              border.col = "black", 
              alpha = 0.8, 
@@ -547,6 +555,8 @@ tm_layout(main.title = "B",
           legend.title.size = 1.2,
           attr.position = c("left", "bottom"), 
           inner.margins = c(.3, .15, .15, .15)))
+
+cas
 ```
 
 ```{r}
@@ -980,7 +990,8 @@ Apr3tornadoes <- Apr3tornadoes %>%
 ```{r}
 Apr3tornadoes$Hour2 <- cut(Apr3tornadoes$Hour2, breaks=c(6,12,18,24,30))
 
-Apr31974 <- (tm_shape(stateBorders) + 
+Apr31974 <- (tm_shape(stateBorders) +
+               tm_text("state_name") +
   tm_borders(col = "gray70", alpha = 1) +
   tm_compass(size = 3, fontsize = 1, lwd = 2, color.dark = "gray70") +       
   tm_scale_bar(width = .3, size = 0.8, lwd = 1.75, color.dark = "gray70") +
@@ -1026,7 +1037,6 @@ Apr31974
 ```{r}
 HistoricalBigDayTornadoes %>%
   group_by(st) %>%
-  summarize(nC = n())%>%
   arrange(desc(nC)) %>%
   head(10)
 ```
@@ -1034,10 +1044,23 @@ HistoricalBigDayTornadoes %>%
 ```{r}
 library(stats)
 
-t.test(x$decade, x$NumClus,  data = x)
+x <- as.data.frame(x)
+
+t.test(x$decade, NumClus,  data = x)
 t.test(x$decade, x$NumTorn,  data = x)
 t.test(x$decade, x$totcas,  data = x)
 
+yo <- x
+  ggplot(yo, aes(x= decade, y = totcas)) +
+  geom_line()
+
+  wilcox.test(x$decade, x$NumTorn)
+  wilcox.test(x$decade, x$totcas)
+  wilcox.test(x$decade, x$NumClus)
+  
+  install.packages("tseries")
+  library(tseries)
+  adf.test()
 ```
 
 
